--- a/MrBright/css/style.css
+++ b/MrBright/css/style.css
@@ -1,6 +1,7 @@
 
 
 body {
+    
     margin: 0;
     padding: 0;
     font-family: 'Source Sans Pro', sans-serif;
@@ -25,6 +26,7 @@ h4 {
     text-transform: uppercase;
     margin-top: 65px;
     font-weight: 700;
+
 }
 
 h2 {
@@ -319,7 +321,7 @@ ul.nav {
 /*pricing-slide area*/
 
 .pricing-slide {
-    background: url(../img/paralax.jpg);
+    background-color: blue;
     background-repeat: no-repeat;
     background-position: fixed;
     -webkit-background-size: cover;
